# pit

./: .env.example  .gitignore  HANDOFF.md  MANIFEST.md  PULL_REQUEST.md  README.md  TEST_REPORT.md  docker-compose.prod.yml  docker-compose.yml
.clawd/: flight_recorder.json
be/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  config.yaml  main.py  pyproject.toml
be/alembic/: env.py
be/alembic/versions/: 000_initial_schema.py  001_add_bout_agents.py  001_core_schema.py  002_add_cascades_and_indexes.py
be/config/presets/: darwin-special.json  first-contact.json  gloves-off.json  index.json
be/src/pit_api/: __init__.py  app.py  config.py  presets.py  utils.py
be/src/pit_api/engine/: __init__.py  agent_runner.py  orchestrator.py  presets.py  share_generator.py  token_meter.py  turn_manager.py
be/src/pit_api/middleware/: __init__.py  auth.py
be/src/pit_api/models/: __init__.py  base.py  bout.py  bout_agent.py  magic_link.py  message.py  metric.py  model.py  preset.py  user.py  vote.py  waitlist.py
be/src/pit_api/routes/: __init__.py  auth.py  bout.py  health.py  presets.py  vote.py  waitlist.py
be/src/pit_api/services/: __init__.py  email.py  jwt.py
be/src/pit_api/store/: __init__.py  preset_loader.py
be/src/pit_api/store/presets/darwin-special/: conspiracy-theorist.md  darwin.md  house-cat.md  meta.json  tech-bro.md
be/tests/: __init__.py  test_cost_ceiling.py  test_e2e_smoke.py  test_health.py
config/: presets.json
db/: client.ts  drizzle.config.ts  package-lock.json  package.json  tsconfig.json
docs/: DEPLOYMENT.md  SCHEMA.md  api-cost-analysis-v1.md  (+15 more)
(+84 files in other folders)
